fixe them color on iphone

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -44,7 +44,7 @@
     z-index: 1;
     width: 100%;
     overflow: hidden;
-    .pillule{
+    .fakeHandle{
       position: relative;
       width: var(--10m);
       height: var(--1m);
